# Boggle_game_haskell

./: .gitignore  2a_score.txt  2b_score.txt  3a_score.txt  3b_score.txt  3c_score.txt  3d_score.txt  boggle.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: boggle-0.1.0.0-inplace-boggle-lib.conf  package.cache
lib/: Boggle.hs
lists/: word_list_500.txt  word_list_60.txt
tests/: BoggleTest.hs
