cabal-version:          2.4
name:                   boggle
version:                0.1.0.0

library boggle-lib
    exposed-modules:    Boggle
    hs-source-dirs:     lib
    build-depends:      base >=4.14.3.0
    default-language:   Haskell2010

executable boggle
    main-is:            Main.hs
    build-depends:      base >=4.14.3.0, containers
    hs-source-dirs:     app
    default-language:   Haskell2010

test-Suite boggle-tests
    type:               exitcode-stdio-1.0
    main-is:            BoggleTest.hs
    build-depends:      base, HUnit, boggle-lib, random, array, containers
    hs-source-dirs:     tests
    default-language:   Haskell2010
